--- a/index.html
+++ b/index.html
@@ -120,16 +120,17 @@
   <!-- Header banner -->
   <header class="banner"></header>
 
-  <main class="wrap">
-    <!-- Main cover PNG -->
-    <img src="AION EtherHall Fusion.png" alt="AION Cover" class="cover-img" />
-
-    <!-- Nav under the cover image -->
+  !-- Nav under the cover image -->
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
+
+  <main class="wrap">
+    <!-- Main cover PNG -->
+    <img src="AION EtherHall Fusion.png" alt="AION Cover" class="cover-img" />
+
 
     <p class="subtitle">Kickstarting January 1, 2026</p>
     <div class="countdown" id="countdown" aria-live="polite"></div>
