--- a/about.html
+++ b/about.html
@@ -1,68 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About EtherHall – AION</title>
+  <!-- Meta -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About — EtherHall</title>
+  <meta name="description" content="About EtherHall and AION — the Artificially Intelligent Operating Nexus. Local-first. Private. Yours." />
+
+  <!-- Fonts & Tailwind -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter','system-ui','sans-serif'] },
+          colors: {
+            base:'#070a0d', ink:'#0b1220',
+            neon:'#39ff88', haze:'#a855f7', haze2:'#bf9cff',
+            line:'rgba(255,255,255,0.10)'
+          },
+          backgroundImage:{ grid:"radial-gradient(circle at 1px 1px, rgba(255,255,255,0.06) 1px, transparent 0)" }
+        }
+      }
+    }
+  </script>
   <style>
-    :root{
-      --bg:#000; --fg:#eaeaf0; --muted:#a2a7b3;
-      --violet:#a855f7; --violet-glow:#c084fc;
-      --green:#22c55e; --green-glow:#4ade80;
-    }
-    *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;background:var(--bg);color:var(--fg);font-family:ui-sans-serif,-apple-system,Segoe UI,Inter,Roboto,sans-serif;line-height:1.6}
-
-    .banner{
-      width:100%;
-      aspect-ratio:16/4;
-      background:url('EHB.png') center/cover no-repeat;
-      min-height:220px;
-      height:clamp(220px,28vw,400px);
-    }
-
-    .nav{margin:16px 0 32px;display:flex;justify-content:center;gap:32px;}
-    .nav a{
-      text-decoration:none;font-weight:700;
-      padding:.5rem 1.2rem;border-radius:6px;
-      background:var(--green);color:var(--violet);
-      border:1px solid rgba(255,255,255,0.15);
-      box-shadow:0 0 10px var(--green-glow),inset 0 0 6px rgba(255,255,255,0.25);
-      transition:all .25s ease;
-    }
-    .nav a:hover{background:var(--green-glow);color:#000;box-shadow:0 0 16px var(--green-glow),0 0 30px rgba(34,197,94,.6)}
-
-    .wrap{width:min(960px,100%);margin:0 auto;padding:32px}
-    h1,h2{color:var(--violet);margin-bottom:.5rem;text-align:center}
-    h2{margin-top:2rem}
-    p{margin:0 0 1.25rem}
+    .glass{backdrop-filter:blur(10px);background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.03))}
+    .banner{width:100%;aspect-ratio:16/4;background:url('EHB.png') center/cover no-repeat;min-height:220px;height:clamp(220px,28vw,420px)}
   </style>
 </head>
-<body>
+<body class="bg-base text-white font-sans antialiased">
+
+  <!-- Background -->
+  <div class="fixed inset-0 -z-10">
+    <div class="absolute inset-0 opacity-30" style="background:
+      radial-gradient(60% 40% at 70% 10%, rgba(159,255,224,0.12), transparent 40%),
+      radial-gradient(50% 30% at 20% 80%, rgba(191,156,255,0.14), transparent 50%);"></div>
+    <div class="absolute inset-0 [background-size:24px_24px] bg-grid"></div>
+  </div>
+
+  <!-- Banner -->
   <header class="banner"></header>
 
-  <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <!-- NAV -->
+  <div class="sticky top-0 z-40 w-full glass/70 border-y border-line">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+      <div class="flex h-14 items-center gap-6 text-sm">
+        <a href="index.html" class="hover:text-white">Home</a>
+        <a href="product.html" class="hover:text-white">Product</a>
+        <a href="about.html" class="text-white">About</a>
+        <a href="contact.html" class="hover:text-white">Contact</a>
+        <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener"
+           class="ml-auto inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 hover:border-haze2/40 hover:bg-white/10 transition">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" class="opacity-90" aria-hidden="true">
+            <path d="M20.317 4.369a19.79 19.79 0 0 0-4.885-1.515c-.211.375-.444.864-.608 1.249-1.844-.276-3.68-.276-5.486 0-.164-.398-.41-.874-.622-1.249A19.736 19.736 0 0 0 3.83 4.369C1.175 9.033.56 13.58.868 18.082a19.9 19.9 0 0 0 6.017 3.032c.465-.635.879-1.304 1.233-2.005a13.18 13.18 0 0 1-1.897-.902c.127-.095.255-.195.376-.296 3.993 1.827 8.312 1.827 12.267 0 .121.101.248.201.376.296-.606.353-1.236.651-1.898.902.36.7.773 1.37 1.232 2.005a19.88 19.88 0 0 0 6.018-3.032c.5-6.905-1.042-11.415-4.548-13.685Z"/>
+          </svg>
+          Discord
+        </a>
+      </div>
+    </div>
+  </div>
 
-  <main class="wrap">
-    <h1>About EtherHall</h1>
-    <p><strong>EtherHall</strong> is building a new kind of AI: one that’s local, modular, and private — a digital assistant that lives on your machine and works with you, not for the cloud.</p>
+  <!-- CONTENT -->
+  <main class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8 py-14 space-y-10">
+    <!-- Hero blurb -->
+    <section>
+      <h1 class="text-4xl sm:text-5xl font-extrabold">About EtherHall</h1>
+      <p class="mt-4 text-white/80 text-lg max-w-3xl">
+        EtherHall started with one person and a dream — a salaried retail job by day, and
+        <strong>AION — the Artificially Intelligent Operating Nexus</strong> by night.
+        Midnight hours, a closet workstation, and the belief that computers could be more than tools — they could be partners.
+      </p>
+      <p class="mt-3 text-white/80 text-lg max-w-3xl">
+        From those roots, EtherHall became a company with a simple aim: give people back control over their machines.
+      </p>
+    </section>
 
-    <p>Our flagship tool, <strong>AION</strong>, is already live and functional. It’s a memory-capable, context-aware AI assistant designed to be run directly on the user’s computer — not over the cloud, and not locked behind subscriptions. AION ships via SSD or download, delivering preconfigured models, interface, memory scaffolding, and a ready-to-boot runtime that installs or runs on the user’s hardware. Just like a modern game or creative tool, AION scales with your machine’s power, from laptops to full rigs.</p>
+    <!-- Pillars -->
+    <section class="grid md:grid-cols-2 gap-6">
+      <div class="rounded-2xl border border-line bg-white/[.06] p-6">
+        <h2 class="text-xl font-semibold">Built for the community at large</h2>
+        <p class="mt-2 text-white/70 text-sm">
+          AION grows step by step with its users. Early backers helped shape it, and the community will always have a voice.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-line bg-white/[.06] p-6">
+        <h2 class="text-xl font-semibold">Built for local-first</h2>
+        <p class="mt-2 text-white/70 text-sm">
+          Your data stays yours. No subscriptions. No lock-in. AION runs on your hardware, not someone else’s cloud.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-line bg-white/[.06] p-6">
+        <h2 class="text-xl font-semibold">Built to scale and grow</h2>
+        <p class="mt-2 text-white/70 text-sm">
+          From one workstation to every household, AION is built for real-world needs today and ready for what’s next.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-line bg-white/[.06] p-6">
+        <h2 class="text-xl font-semibold">Built with portability in mind</h2>
+        <p class="mt-2 text-white/70 text-sm">
+          Run it from a portable SSD if you don’t want to replace your current OS. Boot anywhere and carry your workspace with you.
+        </p>
+      </div>
+    </section>
 
-    <h2>Mission</h2>
-    <p>Our mission is to democratize artificial intelligence — not as a service, but as a companion. We believe every person deserves access to an assistant that works with them, not on them. No cloud. No surveillance. No subscriptions. Just a sovereign, local, memory-capable AI that grows with you.</p>
+    <!-- Values -->
+    <section class="rounded-3xl border border-line bg-white/[.06] p-8">
+      <h2 class="text-2xl font-bold">What we value</h2>
+      <ul class="mt-4 space-y-2 text-white/80 text-sm list-disc list-inside">
+        <li><strong>Ownership</strong> — your data and tools belong to you.</li>
+        <li><strong>Simplicity</strong> — fewer knobs, more results.</li>
+        <li><strong>Transparency</strong> — clear behavior, no mystery calls home.</li>
+        <li><strong>Community</strong> — built for and with the people who believe in local AI.</li>
+      </ul>
+    </section>
 
-    <p>AION doesn’t just chat — it assists, adapts, and remembers. It runs locally, respects your privacy, and offers plug-and-play intelligence for the real world.</p>
-
-    <h2>Vision</h2>
-    <p>We are building toward a future where digital assistants are no longer products — they are partners. AION sets the foundation for a new kind of operating system — one where AI isn’t an app, but the interface. This will culminate in a full-stack, AI-native environment where users don’t just use software — they collaborate with it.</p>
-
-    <p>From personalized memory and modular upgrades to local execution and ethical autonomy, we’re setting the standard for what private, personal AI should be. This isn’t just about building software. It’s about redefining the relationship between people and machines — one assistant at a time.</p>
+    <!-- Contact -->
+    <section>
+      <h2 class="text-2xl font-bold">Contact</h2>
+      <p class="mt-2 text-white/70">
+        Press, partnerships, or pilots — <a class="text-neon underline" href="mailto:social@etherhall.com">social@etherhall.com</a> or join our
+        <a class="text-neon underline" href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener">Discord</a>.
+      </p>
+    </section>
   </main>
+
+  <!-- FOOTER -->
+  <footer class="border-t border-line py-10">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm text-white/60 flex items-center justify-between gap-4">
+      <span>© <span id="y"></span> EtherHall LLC.</span>
+      <div class="flex items-center gap-4">
+        <a href="privacy.html" class="hover:text-white">Privacy</a>
+        <a href="terms.html" class="hover:text-white">Terms</a>
+      </div>
+    </div>
+  </footer>
+  <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
 </body>
 </html>
