--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact EtherHall</title>
-  <style>
-    :root{
-      --bg:#000; --fg:#eaeaf0; --muted:#a2a7b3;
-      --violet:#a855f7; --violet-glow:#c084fc;
-      --green:#22c55e; --green-glow:#4ade80;
+  <!-- Meta -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact — EtherHall</title>
+  <meta name="description" content="Contact EtherHall — AION: Artificially Intelligent Operating Nexus." />
+
+  <!-- Fonts & Tailwind -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter','system-ui','sans-serif'] },
+          colors: {
+            base:'#070a0d', ink:'#0b1220',
+            neon:'#39ff88', haze:'#a855f7', haze2:'#bf9cff',
+            line:'rgba(255,255,255,0.10)'
+          },
+          backgroundImage:{ grid:"radial-gradient(circle at 1px 1px, rgba(255,255,255,0.06) 1px, transparent 0)" }
+        }
+      }
     }
-    *{box-sizing:border-box}
+  </script>
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <style>
     html,body{height:100%}
-    body{margin:0;background:var(--bg);color:var(--fg);font-family:ui-sans-serif,-apple-system,Segoe UI,Inter,Roboto,sans-serif;line-height:1.6}
-
-    .banner{width:100%;aspect-ratio:16/4;background:url('EHB.png') center/cover no-repeat;min-height:220px;height:clamp(220px,28vw,400px)}
-
-    .nav{margin:16px 0 32px;display:flex;justify-content:center;gap:32px}
-    .nav a{text-decoration:none;font-weight:700;padding:.5rem 1.2rem;border-radius:6px;background:var(--green);color:var(--violet);border:1px solid rgba(255,255,255,0.15);box-shadow:0 0 10px var(--green-glow),inset 0 0 6px rgba(255,255,255,0.25);transition:all .25s ease}
-    .nav a:hover{background:var(--green-glow);color:#000;box-shadow:0 0 16px var(--green-glow),0 0 30px rgba(34,197,94,.6)}
-
-    .wrap{width:min(720px,100%);margin:0 auto;padding:32px}
-    h1{color:var(--violet);margin-bottom:.5rem;text-align:center}
-    p{text-align:center;margin:0 0 1.25rem}
-
-    form{display:flex;flex-direction:column;gap:1rem;margin-top:1.5rem}
-    input,textarea{padding:.75rem;border-radius:6px;border:1px solid #444;background:#111;color:var(--fg);font-size:1rem}
-    textarea{resize:vertical;min-height:120px}
-    button{background:var(--green);color:var(--violet);font-weight:700;padding:.75rem;border:none;border-radius:6px;cursor:pointer;box-shadow:0 0 10px var(--green-glow)}
-    button:hover{background:var(--green-glow);color:#000}
-
-    .discord-button{margin-top:1.5rem;background:#5865F2;color:#fff;padding:1rem 1.5rem;border:none;border-radius:999px;cursor:pointer;font-weight:700;display:block;width:max-content;margin-left:auto;margin-right:auto}
+    .glass{backdrop-filter:blur(10px);background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.03))}
+    .banner{width:100%;aspect-ratio:16/4;background:url('EHB.png') center/cover no-repeat;min-height:220px;height:clamp(220px,28vw,420px)}
   </style>
 </head>
-<body>
+<body class="bg-base text-white font-sans antialiased">
+
+  <!-- Background -->
+  <div class="fixed inset-0 -z-10">
+    <div class="absolute inset-0 opacity-30" style="background:
+      radial-gradient(60% 40% at 70% 10%, rgba(159,255,224,0.12), transparent 40%),
+      radial-gradient(50% 30% at 20% 80%, rgba(191,156,255,0.14), transparent 50%);"></div>
+    <div class="absolute inset-0 [background-size:24px_24px] bg-grid"></div>
+  </div>
+
+  <!-- Banner -->
   <header class="banner"></header>
 
-  <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <!-- NAV -->
+  <div class="sticky top-0 z-40 w-full glass/70 border-y border-line">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+      <div class="flex h-14 items-center gap-6 text-sm">
+        <a href="index.html" class="hover:text-white">Home</a>
+        <a href="product.html" class="hover:text-white">Product</a>
+        <a href="about.html" class="hover:text-white">About</a>
+        <a href="contact.html" class="text-white">Contact</a>
+        <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener"
+           class="ml-auto inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 hover:border-haze2/40 hover:bg-white/10 transition">
+          <!-- Discord glyph -->
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" class="opacity-90" aria-hidden="true">
+            <path d="M20.317 4.369a19.79 19.79 0 0 0-4.885-1.515c-.211.375-.444.864-.608 1.249-1.844-.276-3.68-.276-5.486 0-.164-.398-.41-.874-.622-1.249A19.736 19.736 0 0 0 3.83 4.369C1.175 9.033.56 13.58.868 18.082a19.9 19.9 0 0 0 6.017 3.032c.465-.635.879-1.304 1.233-2.005a13.18 13.18 0 0 1-1.897-.902c.127-.095.255-.195.376-.296 3.993 1.827 8.312 1.827 12.267 0 .121.101.248.201.376.296-.606.353-1.236.651-1.898.902.36.7.773 1.37 1.232 2.005a19.88 19.88 0 0 0 6.018-3.032c.5-6.905-1.042-11.415-4.548-13.685Z"/>
+          </svg>
+          Discord
+        </a>
+      </div>
+    </div>
+  </div>
 
-  <main class="wrap">
-    <h1>Contact Us</h1>
-    <p>We’d love to hear from you. Send us a message and we’ll get back as soon as possible.</p>
+  <!-- CONTENT -->
+  <main class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-14 space-y-10">
+    <!-- Title -->
+    <section>
+      <h1 class="text-4xl sm:text-5xl font-extrabold">Contact EtherHall</h1>
+      <p class="mt-3 text-white/75 max-w-2xl">
+        Press, partnerships, pilots, or community — connect with us directly.
+      </p>
+    </section>
 
-    <!-- Simple Contact Form (Formspree example, replace with your endpoint) -->
-    <form action="https://formspree.io/f/your-form-id" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <!-- Primary email card -->
+    <section class="rounded-3xl border border-line bg-white/[.06] p-6">
+      <div class="flex items-center gap-3">
+        <i data-lucide="mail" class="w-5 h-5 text-white/80"></i>
+        <h2 class="text-lg font-semibold">Email</h2>
+      </div>
+      <div class="mt-3">
+        <a href="mailto:social@etherhall.com" class="inline-flex items-center gap-2 text-neon hover:underline">
+          <i data-lucide="send" class="w-4 h-4"></i>
+          social@etherhall.com
+        </a>
+      </div>
+    </section>
 
-    <p style="margin-top:2rem;color:var(--muted)">Or reach us directly at <a href="mailto:contact@etherhall.com" style="color:var(--violet)">contact@etherhall.com</a></p>
+    <!-- Socials list (icons + handles) -->
+    <section class="rounded-3xl border border-line bg-white/[.06] p-6">
+      <h2 class="text-lg font-semibold">Social</h2>
+      <ul class="mt-4 divide-y divide-white/10">
+        <!-- X / Twitter -->
+        <li class="py-3 flex items-center justify-between">
+          <div class="flex items-center gap-3">
+            <i data-lucide="twitter" class="w-5 h-5 text-white/70"></i>
+            <span class="text-white/90">@EtherHallHQ</span>
+          </div>
+          <a href="https://x.com/EtherHallHQ" target="_blank" rel="noopener" class="text-white/70 hover:text-white text-sm">Open</a>
+        </li>
 
-    <p style="margin-top:2rem;text-align:center;font-weight:600">Join our community and get involved:</p>
-    <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener noreferrer">
-      <button class="discord-button">Join our Discord</button>
-    </a>
+        <!-- YouTube -->
+        <li class="py-3 flex items-center justify-between">
+          <div class="flex items-center gap-3">
+            <i data-lucide="youtube" class="w-5 h-5 text-white/70"></i>
+            <span class="text-white/90">YouTube — EtherHall</span>
+          </div>
+          <a href="https://youtube.com/@EtherHall" target="_blank" rel="noopener" class="text-white/70 hover:text-white text-sm">Open</a>
+        </li>
+
+        <!-- TikTok (no Lucide brand icon; using 'music' as a neutral glyph) -->
+        <li class="py-3 flex items-center justify-between">
+          <div class="flex items-center gap-3">
+            <i data-lucide="music" class="w-5 h-5 text-white/70"></i>
+            <span class="text-white/90">@etherhallhq</span>
+          </div>
+          <a href="https://tiktok.com/@etherhallhq" target="_blank" rel="noopener" class="text-white/70 hover:text-white text-sm">Open</a>
+        </li>
+
+        <!-- Reddit -->
+        <li class="py-3 flex items-center justify-between">
+          <div class="flex items-center gap-3">
+            <i data-lucide="reddit" class="w-5 h-5 text-white/70"></i>
+            <span class="text-white/90">u/EtherHall</span>
+          </div>
+          <a href="https://reddit.com/u/EtherHall" target="_blank" rel="noopener" class="text-white/70 hover:text-white text-sm">Open</a>
+        </li>
+
+        <!-- Discord -->
+        <li class="py-3 flex items-center justify-between">
+          <div class="flex items-center gap-3">
+            <!-- Custom Discord glyph for consistency -->
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" class="text-white/70" aria-hidden="true">
+              <path d="M20.317 4.369a19.79 19.79 0 0 0-4.885-1.515c-.211.375-.444.864-.608 1.249-1.844-.276-3.68-.276-5.486 0-.164-.398-.41-.874-.622-1.249A19.736 19.736 0 0 0 3.83 4.369C1.175 9.033.56 13.58.868 18.082a19.9 19.9 0 0 0 6.017 3.032c.465-.635.879-1.304 1.233-2.005a13.18 13.18 0 0 1-1.897-.902c.127-.095.255-.195.376-.296 3.993 1.827 8.312 1.827 12.267 0 .121.101.248.201.376.296-.606.353-1.236.651-1.898.902.36.7.773 1.37 1.232 2.005a19.88 19.88 0 0 0 6.018-3.032c.5-6.905-1.042-11.415-4.548-13.685Z"/>
+            </svg>
+            <span class="text-white/90">Discord — Server Invite</span>
+          </div>
+          <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener" class="text-white/70 hover:text-white text-sm">Open</a>
+        </li>
+      </ul>
+    </section>
   </main>
+
+  <!-- FOOTER -->
+  <footer class="border-t border-line py-10">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm text-white/60 flex items-center justify-between gap-4">
+      <span>© <span id="y"></span> EtherHall LLC.</span>
+      <div class="flex items-center gap-4">
+        <a href="privacy.html" class="hover:text-white">Privacy</a>
+        <a href="terms.html" class="hover:text-white">Terms</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    lucide.createIcons();
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
