--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EtherHall — AION</title>
-  <meta name="description" content="AION — the Artificially Intelligent Operating Nexus by EtherHall. A local-first AI desktop with sovereign memory, real tools, and zero cloud lock-in." />
+  <meta name="description" content="AION — the Artificially Intelligent Operating Nexus by EtherHall. Local AI that runs on your hardware. Private by default, portable, and built for real life." />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="EtherHall — AION" />
-  <meta property="og:description" content="Local-first AI desktop. Sovereign. Fast. Private." />
+  <meta property="og:description" content="Turn your PC into Your own Local AI. Private. Fast. Yours." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://etherhall.com" />
   <meta property="og:image" content="https://etherhall.com/og.jpg" />
@@ -42,10 +42,9 @@
   <style>
     html,body { height: 100% }
     .glass { backdrop-filter: blur(10px); background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03)); }
-    .banner{width:100%;aspect-ratio:16/4;background:url('EHB.png') center/cover no-repeat;min-height:220px;height:clamp(220px,28vw,460px)}
   </style>
 
-  <!-- MailerLite (keep your account id) -->
+  <!-- MailerLite -->
   <script>
     (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
     .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
@@ -64,25 +63,24 @@
     <div class="absolute inset-0 [background-size:24px_24px] bg-grid"></div>
   </div>
 
-  <!-- Top banner -->
-  <header class="banner"></header>
-
   <!-- NAV -->
   <div class="sticky top-0 z-40 w-full glass/70 border-y border-line">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-14 items-center justify-between">
-        <a href="/" class="flex items-center gap-2 font-extrabold tracking-tight">
+        <a href="index.html" class="flex items-center gap-2 font-extrabold tracking-tight" aria-label="EtherHall home">
           <span class="inline-block h-6 w-6 rounded-full bg-haze2/40 ring-2 ring-haze2/60"></span>
           <span>EtherHall</span>
         </a>
-        <nav class="hidden md:flex items-center gap-8 text-sm text-white/80">
+        <nav class="hidden md:flex items-center gap-8 text-sm text-white/80" aria-label="Primary">
           <a href="product.html" class="hover:text-white">Product</a>
           <a href="about.html" class="hover:text-white">About</a>
           <a href="#roadmap" class="hover:text-white">Roadmap</a>
           <a href="contact.html" class="hover:text-white">Contact</a>
         </nav>
         <div class="flex items-center gap-3">
-          <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener" class="hidden sm:inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 text-sm hover:border-haze2/40 hover:bg-white/10 transition">
+          <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener"
+             class="hidden sm:inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 text-sm hover:border-haze2/40 hover:bg-white/10 transition"
+             aria-label="Join our Discord server">
             <i data-lucide="messages-square" class="w-4 h-4"></i> Discord
           </a>
           <a href="#updates" class="inline-flex items-center gap-2 rounded-2xl bg-neon/20 px-3 py-1.5 text-sm font-semibold text-neon hover:shadow-glow transition">
@@ -100,21 +98,27 @@
         <div>
           <p class="text-white/70 tracking-widest text-xs">ARTIFICIALLY INTELLIGENT OPERATING NEXUS</p>
           <h1 class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight">
-            Meet <span class="text-neon">AION</span> — a local-first AI desktop
+            Turn your PC into <span class="text-neon">Your own Local AI</span>
           </h1>
           <p class="mt-5 text-lg text-white/80 max-w-xl">
-            AION (Artificially Intelligent Operating Nexus) is designed for privacy, performance, and ownership — without subscriptions or cloud lock-in.
+            AION — the Artificially Intelligent Operating Nexus — runs on your hardware and grows with you.
+            No subscriptions. No cloud leash. Real help for everyday work, learning, and play.
           </p>
           <div class="mt-7 flex flex-col sm:flex-row gap-3">
             <a href="product.html" class="inline-flex items-center justify-center gap-2 rounded-2xl bg-neon text-black px-5 py-3 font-semibold hover:opacity-90 transition">
               <i data-lucide="play" class="w-4 h-4"></i> Explore Product
             </a>
-            <a href="contact.html" class="inline-flex items-center justify-center gap-2 rounded-2xl border border-line px-5 py-3 font-semibold hover:bg-white/5 transition">
-              <i data-lucide="mail" class="w-4 h-4"></i> Talk to Us
+            <a href="#updates" class="inline-flex items-center justify-center gap-2 rounded-2xl border border-line px-5 py-3 font-semibold hover:bg-white/5 transition">
+              <i data-lucide="mail" class="w-4 h-4"></i> Get Launch Updates
             </a>
           </div>
           <div class="mt-6 text-white/70 text-sm">
             <span class="font-semibold text-white">Kickstarting:</span> Jan 1, 2026 · <span id="cd" class="text-haze font-mono"></span>
+          </div>
+          <div class="mt-6 grid grid-cols-2 sm:flex sm:flex-wrap gap-4 text-white/60 text-sm">
+            <div class="flex items-center gap-2"><i data-lucide="shield-check" class="w-4 h-4"></i> Local-first</div>
+            <div class="flex items-center gap-2"><i data-lucide="lock" class="w-4 h-4"></i> Private by default</div>
+            <div class="flex items-center gap-2"><i data-lucide="hard-drive" class="w-4 h-4"></i> Portable SSD option</div>
           </div>
         </div>
 
@@ -129,8 +133,8 @@
                 <span class="h-3 w-3 rounded-full bg-green-400/80"></span>
                 <span class="ml-auto text-xs text-white/60">AION — Interface Preview</span>
               </div>
-              <button id="shotBtn" class="block relative group">
-                <img src="AIONinterface.png" alt="AION interface preview" class="w-full h-auto object-cover" />
+              <button id="shotBtn" class="block relative group" aria-label="Open full-size screenshot">
+                <img src="AIONinterface.png" alt="AION desktop interface" class="w-full h-auto object-cover" />
                 <span class="absolute inset-0 ring-1 ring-white/10 group-hover:ring-white/30 transition"></span>
               </button>
             </div>
@@ -146,17 +150,13 @@
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="max-w-3xl">
         <h2 class="text-3xl font-bold">Roadmap</h2>
-
-        <!-- Cinematic intro (your Option 2) -->
         <p class="mt-3 text-white/70">
-          <strong>From midnight builds to living rooms worldwide</strong> — AION was born in the dark, tested in real life,
-          and carried forward by backers who believe in a brighter future with Local AI. AION grows step by step with its community,
-          and so will your personal AI the moment you power it on. Whether you dream of learning, need clarity when you’re stuck,
-          or just want technology that works with you instead of against you… <strong>AION is the answer.</strong>
+          <strong>From midnight builds to living rooms worldwide.</strong> AION was born after dark, tested in real life,
+          and carried forward by backers who believe in Local AI. It grows step by step with its community —
+          and so will your personal AI the moment you power it on.
         </p>
       </div>
 
-      <!-- 3 Blocks (you can edit bullets freely) -->
       <div class="mt-10 grid md:grid-cols-3 gap-6">
         <!-- Phase 1 -->
         <div class="rounded-2xl border border-line bg-white/[.06] p-6">
@@ -176,7 +176,7 @@
           <ul class="mt-3 space-y-2 text-white/80 text-sm list-disc list-inside">
             <li>Closed beta for backers</li>
             <li>Community testing & feedback shaping features</li>
-            <li>Preparing hardware distribution</li>
+            <li>Preparing portable SSD option (“The Forge”)</li>
           </ul>
         </div>
 
@@ -218,7 +218,7 @@
   </footer>
 
   <!-- Lightbox -->
-  <div id="lightbox" class="fixed inset-0 z-50 hidden items-center justify-center bg-black/70 p-4">
+  <div id="lightbox" class="fixed inset-0 z-50 hidden items-center justify-center bg-black/70 p-4" aria-hidden="true">
     <button id="closeLb" class="absolute top-4 right-4 rounded-lg bg-white/10 px-3 py-2 text-sm hover:bg-white/20">Close</button>
     <img src="AIONinterface.png" alt="AION interface preview (full)" class="max-w-full max-h-full rounded-xl ring-1 ring-white/20" />
   </div>
@@ -236,15 +236,20 @@
       const hh = Math.floor((d/3600000)%24);
       const mm = Math.floor((d/60000)%60);
       const ss = Math.floor((d/1000)%60);
-      document.getElementById('cd').textContent = `${dd}d ${hh}h ${mm}m ${ss}s`;
+      const el = document.getElementById('cd');
+      if (el) el.textContent = `${dd}d ${hh}h ${mm}m ${ss}s`;
     }
     setInterval(tick,1000); tick();
 
     // Lightbox
     const lb = document.getElementById('lightbox');
-    document.getElementById('shotBtn').addEventListener('click', () => lb.classList.remove('hidden'));
-    document.getElementById('closeLb').addEventListener('click', () => lb.classList.add('hidden'));
-    lb.addEventListener('click', (e) => { if (e.target === lb) lb.classList.add('hidden'); });
+    const open = document.getElementById('shotBtn');
+    const close = document.getElementById('closeLb');
+    if (open && lb && close) {
+      open.addEventListener('click', () => { lb.classList.remove('hidden'); lb.setAttribute('aria-hidden','false'); });
+      close.addEventListener('click', () => { lb.classList.add('hidden'); lb.setAttribute('aria-hidden','true'); });
+      lb.addEventListener('click', (e) => { if (e.target === lb) { lb.classList.add('hidden'); lb.setAttribute('aria-hidden','true'); } });
+    }
   </script>
 </body>
 </html>
