--- a/privacy.html
+++ b/privacy.html
@@ -3,122 +3,77 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy — EtherHall</title>
-  <meta name="description" content="Privacy Policy for EtherHall and AION — Artificially Intelligent Operating Nexus." />
-    <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="EtherHall — AION" />
-  <meta property="og:description" content="Local-first AI desktop. Sovereign. Fast. Private." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://etherhall.com" />
-  <meta property="og:image" content="https://etherhall.com/og.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
+  <title>Privacy — EtherHall</title>
+  <meta name="description" content="Privacy Policy for EtherHall." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','system-ui','sans-serif']},colors:{base:'#070a0d',line:'rgba(255,255,255,0.10)',neon:'#39ff88',haze:'#a855f7'},backgroundImage:{grid:"radial-gradient(circle at 1px 1px, rgba(255,255,255,0.06) 1px, transparent 0)"}}}}</script>
+  <script>
+    tailwind.config={theme:{extend:{
+      fontFamily:{sans:['Inter','system-ui','sans-serif']},
+      colors:{base:'#070a0d', haze2:'#bf9cff', line:'rgba(255,255,255,0.10)'},
+      backgroundImage:{grid:"radial-gradient(circle at 1px 1px, rgba(255,255,255,0.06) 1px, transparent 0)"}
+    }}} 
+  </script>
   <style>
-    html,body{height:100%} body{background:#070a0d;color:#fff}
+    html,body{height:100%}
     .glass{backdrop-filter:blur(10px);background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.03))}
-    .banner{width:100%;aspect-ratio:16/4;background:url('EHB.png') center/cover no-repeat;min-height:220px;height:clamp(220px,28vw,420px)}
   </style>
 </head>
-<body class="font-sans antialiased">
-  <header class="banner"></header>
-    <!-- NAV -->
+<body class="bg-base text-white font-sans antialiased">
+  <div class="fixed inset-0 -z-10">
+    <div class="absolute inset-0 opacity-30" style="background:
+      radial-gradient(60% 40% at 70% 10%, rgba(159,255,224,0.12), transparent 40%),
+      radial-gradient(50% 30% at 20% 80%, rgba(191,156,255,0.14), transparent 50%);"></div>
+    <div class="absolute inset-0 [background-size:24px_24px] bg-grid"></div>
+  </div>
+
+  <!-- NAV -->
   <div class="sticky top-0 z-40 w-full glass/70 border-y border-line">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-14 items-center justify-between">
-        <a href="/" class="flex items-center gap-2 font-extrabold tracking-tight">
+        <a href="index.html" class="flex items-center gap-2 font-extrabold tracking-tight">
           <span class="inline-block h-6 w-6 rounded-full bg-haze2/40 ring-2 ring-haze2/60"></span>
           <span>EtherHall</span>
         </a>
         <nav class="hidden md:flex items-center gap-8 text-sm text-white/80">
-          <a href="index.html" class="hover:text-white">Home</a>
           <a href="product.html" class="hover:text-white">Product</a>
           <a href="about.html" class="hover:text-white">About</a>
-          <a href="#roadmap" class="hover:text-white">Roadmap</a>
+          <a href="index.html#roadmap" class="hover:text-white">Roadmap</a>
           <a href="contact.html" class="hover:text-white">Contact</a>
         </nav>
-        <div class="flex items-center gap-3">
-          <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener" class="hidden sm:inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 text-sm hover:border-haze2/40 hover:bg-white/10 transition">
-            <i data-lucide="messages-square" class="w-4 h-4"></i> Discord
-          </a>
-          <a href="#updates" class="inline-flex items-center gap-2 rounded-2xl bg-neon/20 px-3 py-1.5 text-sm font-semibold text-neon hover:shadow-glow transition">
-            <i data-lucide="zap" class="w-4 h-4"></i> Get Updates
-          </a>
-        </div>
       </div>
     </div>
   </div>
 
-  <main class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-14 space-y-8">
-    <h1 class="text-4xl font-extrabold">Privacy Policy</h1>
-    <p class="text-white/80">Last updated: <span id="today"></span></p>
+  <main class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 py-14 space-y-6">
+    <h1 class="text-3xl sm:text-4xl font-extrabold">Privacy Policy</h1>
+    <p class="text-white/70">Last updated: <span id="d"></span></p>
 
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">Overview</h2>
-      <p class="mt-2 text-white/75 text-sm">
-        EtherHall respects your privacy. AION — Artificially Intelligent Operating Nexus — is designed to run locally.
-        Website data collection is intentionally minimal and transparent.
-      </p>
-    </section>
-
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">What we collect</h2>
-      <ul class="mt-2 text-white/75 text-sm list-disc list-inside space-y-1">
-        <li><strong>Contact submissions:</strong> If you send us a message, we store your name, email, and message.</li>
-        <li><strong>Newsletter sign-ups:</strong> If you subscribe, we store your email with our email provider.</li>
-        <li><strong>Basic logs:</strong> Our host may record standard server logs (IP, user-agent, request path).</li>
+    <section class="rounded-3xl border border-line bg-white/[.06] p-6 space-y-3">
+      <p class="text-white/80">We build AION to be local-first and private by default. This website collects minimal data needed to operate (e.g., basic analytics and mailing list submissions you choose to provide).</p>
+      <ul class="list-disc list-inside text-white/80 text-sm space-y-1">
+        <li><strong>Local-first product</strong>: AION runs on your hardware; data stays with you.</li>
+        <li><strong>Email updates</strong>: If you subscribe, we store your email to send launch updates. You can unsubscribe anytime.</li>
+        <li><strong>Cookies / analytics</strong>: We use lightweight analytics to understand traffic and improve the site.</li>
+        <li><strong>Contact</strong>: For privacy questions, email <a class="underline" href="mailto:social@etherhall.com">social@etherhall.com</a>.</li>
       </ul>
-    </section>
-
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">How we use data</h2>
-      <ul class="mt-2 text-white/75 text-sm list-disc list-inside space-y-1">
-        <li>To reply to inquiries and provide support.</li>
-        <li>To send opt-in updates and product announcements.</li>
-        <li>To maintain site reliability and prevent abuse.</li>
-      </ul>
-    </section>
-
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">Sharing</h2>
-      <p class="mt-2 text-white/75 text-sm">
-        We don’t sell your data. We share only with service providers strictly as needed to operate the site
-        (e.g., email delivery) under contractual privacy terms.
-      </p>
-    </section>
-
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">Your choices</h2>
-      <ul class="mt-2 text-white/75 text-sm list-disc list-inside space-y-1">
-        <li>Unsubscribe links are included in all marketing emails.</li>
-        <li>Contact <a href="mailto:hello@etherhall.com" class="text-neon underline">hello@etherhall.com</a> to request access or deletion.</li>
-      </ul>
-    </section>
-
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">Security</h2>
-      <p class="mt-2 text-white/75 text-sm">
-        We use reasonable administrative, technical, and physical safeguards appropriate to the nature of the data we hold.
-      </p>
-    </section>
-
-    <section class="rounded-2xl border border-line bg-white/[.06] p-6">
-      <h2 class="text-xl font-semibold">Contact</h2>
-      <p class="mt-2 text-white/75 text-sm">
-        Questions? <a href="mailto:hello@etherhall.com" class="text-neon underline">hello@etherhall.com</a>
-      </p>
     </section>
   </main>
 
   <footer class="border-t border-line py-10">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm text-white/60">© <span id="y"></span> EtherHall LLC.</div>
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm text-white/60 flex items-center justify-between gap-4">
+      <span>© <span id="y"></span> EtherHall LLC.</span>
+      <div class="flex items-center gap-4">
+        <a href="privacy.html" class="hover:text-white">Privacy</a>
+        <a href="terms.html" class="hover:text-white">Terms</a>
+      </div>
+    </div>
   </footer>
   <script>
     document.getElementById('y').textContent=new Date().getFullYear();
-    const d=new Date();document.getElementById('today').textContent=d.toLocaleDateString();
+    document.getElementById('d').textContent=new Date().toLocaleDateString();
   </script>
 </body>
 </html>
