--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — EtherHall</title>
-  <meta name="description" content="About EtherHall and AION — built after dark, tested in real life, and carried forward by its community." />
+  <!-- Updated meta description to focus on EtherHall's mission -->
+  <meta name="description" content="About EtherHall – building local‑first AI systems for individuals and organizations that require privacy and offline operations." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -57,15 +58,17 @@
   <main class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 py-14 space-y-10">
     <header>
       <h1 class="text-4xl sm:text-5xl font-extrabold">About EtherHall</h1>
+      <!-- Updated tagline to remove backer language -->
       <p class="mt-3 text-white/75 max-w-2xl">
-        Built after dark, tested in real life, and carried forward by every backer who believes in a brighter future with Local AI.
+        Built after dark, tested in real life, and carried forward by a community committed to privacy‑first local AI.
       </p>
     </header>
 
+    <!-- Mission section replacing the AION section -->
     <section class="rounded-3xl border border-line bg-white/[.06] p-6 space-y-3">
-      <h2 class="text-xl font-semibold">AION — Artificially Intelligent Operating Nexus</h2>
+      <h2 class="text-xl font-semibold">Our Mission</h2>
       <p class="text-white/80">
-        AION is designed to turn your PC into a local AI that grows with you. You interact with your AI; your AI performs actions or guides you through them. Your AI is your operating system.
+        EtherHall builds local‑first AI systems for people and organizations that cannot rely on the cloud due to privacy, legal, or operational constraints. We believe in empowering individuals and businesses with AI that runs on their own hardware and keeps their data private.
       </p>
     </section>
 
@@ -82,8 +85,8 @@
         <p class="mt-2 text-white/70 text-sm">AION grows step by step with its community. Your usage and feedback shape what ships.</p>
       </div>
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
-        <h4 class="font-semibold">Local-first</h4>
-        <p class="mt-2 text-white/70 text-sm">Runs on your machine. Data stays with you. Network features are opt-in and transparent.</p>
+        <h4 class="font-semibold">Local‑first</h4>
+        <p class="mt-2 text-white/70 text-sm">Runs on your machine. Data stays with you. Network features are opt‑in and transparent.</p>
       </div>
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
         <h4 class="font-semibold">Built to scale and grow</h4>
@@ -91,7 +94,8 @@
       </div>
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
         <h4 class="font-semibold">Portable & interchangeable</h4>
-        <p class="mt-2 text-white/70 text-sm">Works off a portable SSD if you don’t want to replace your current OS yet.</p>
+        <!-- Updated text to avoid implying OS replacement -->
+        <p class="mt-2 text-white/70 text-sm">Run AION from a portable SSD so you can use it alongside your current system without replacing anything.</p>
       </div>
     </section>
 
